raffia/tests/error/less/interpolation/declaration-value.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but found `{`
  ┌─ declaration-value.less:1:3
  │
1 │ a {
  │   ^


